--- a/README.Rmd
+++ b/README.Rmd
@@ -1,12 +1,8 @@
-# SCnorm
+# SCnorm: robust normalization of single-cell RNA-seq data
 
+SCnorm is an R package which can be used to normalize single-cell RNA-seq data. 
 
-A quantile regression based approach for robust normalization of single cell RNA-seq data
-
-
-SCnorm is an R package which can be used to normalize single cell RNA-seq data. 
-
-Details of SCnorm may be found in the vignette.
+Details of SCnorm may be found in the vignette located here: [SCnorm Vignette](https://www.biostat.wisc.edu/~kendzior/SCNORM/SCnorm.pdf)
 
 ## Installation
 
@@ -16,7 +12,9 @@ Make sure to use the latest version of SCnorm by installing it from GitHub:
 library(devtools)
 devtools::install_github("rhondabacher/SCnorm")
 ```
-Vignette is located here: [SCnorm Vignette](https://www.biostat.wisc.edu/~kendzior/SCNORM/SCnorm.pdf)
+To access a version of SCnorm that does not require R version >= 3.4 you can 
+download the SCnorm from the development branch here: 
+[develop branch](https://github.com/rhondabacher/SCnorm/tree/develop)
 
 
 ## Author
@@ -24,6 +22,8 @@ Vignette is located here: [SCnorm Vignette](https://www.biostat.wisc.edu/~kendzi
 Rhonda Bacher <rhonda.bacher@gmail.com>
 
 ## Latest Update: v0.99.4 
-SCnorm has been updated for Bioconductor submission, along with other updates and more details for usage -- please see vignette for complete updates.
+SCnorm has been updated for Bioconductor submission, along with other updates and more details for usage -- please see vignette for complete updates. 
+
+
 
 
